--- a/src/main/resources/templates/admin/categories/search.html
+++ b/src/main/resources/templates/admin/categories/search.html
@@ -1,37 +1,166 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<!-- <!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{admin/dashboardLayout.html}">
 
 <head>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+			font-family: 'Poppins', sans-serif;
+		}
 
+		body {
+			min-height: 100vh;
+			background: white;
+		}
+
+		.navigation {
+			position: fixed;
+			width: 60px;
+			height: 100%;
+			background: #3c8dbc;
+			transition: 0.5s;
+			overflow: hidden;
+		}
+
+		.navigation:hover {
+			width: 250px;
+		}
+
+		.navigation ul {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+		}
+
+		.navigation li {
+			position: relative;
+			width: 100%;
+			list-style: none;
+		}
+
+		.navigation ul li:hover {
+			background: #367fa9;
+		}
+
+		.navigation ul li a {
+			position: relative;
+			display: flex;
+			width: 100%;
+			text-decoration: none;
+			color: white;
+		}
+
+		.navigation ul li a .icon {
+			position: relative;
+			display: block;
+			min-width: 60px;
+			height: 60px;
+			line-height: 60px;
+			text-align: center;
+		}
+
+		.navigation ul li a .icon .fas {
+			font-size: 24px;
+		}
+
+		.navigation ul li a .title {
+			position: relative;
+			display: block;
+			padding: 0 10px;
+			height: 60px;
+			line-height: 60px;
+			text-align: start;
+			white-space: nowrap;
+		}
+
+		.left-column {
+			width: 30%;
+			float: left;
+		}
+
+		.right-column {
+			width: 70%;
+			float: right;
+		}
+	</style>
 </head>
 
 <body>
-		<section class="row" layout:fragment="content">
+	<section class="row" layout:fragment="content">
+		<div class="left-column">
+			<div class="navigation">
+				<ul>
+					<li>
+						<a href="#">
+							<span class="icon "><i class="fas fa-home"></i></span>
+							<span class="title"> Home </span>
+						</a>
+					</li>
+					<li>
+						<a th:href="@{/admin/accounts}">
+							<span class="icon"><i class="fas fa-users"></i></span>
+							<span class="title"> Manage User </span>
+						</a>
+					</li>
+					<li>
+						<a th:href="@{/admin/categories}">
+							<span class="icon"><i class="fas fa-align-right"></i></span>
+							<span class="title"> Manage Category </span>
+						</a>
+					</li>
+					<li>
+						<a th:href="@{/admin/products}">
+							<span class="icon"><i class="fas fa-list"></i></span>
+							<span class="title"> Manage Product </span>
+						</a>
+					</li>
+					<li>
+						<a th:href="@{/admin/orders}">
+							<span class="icon"><i class="fas fa-cart-arrow-down"></i></span>
+							<span class="title"> Manage Order </span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="icon"><i class="fas fa-id-card"></i></span>
+							<span class="title"> Manage Profile </span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="icon"><i class="fas fa-sign-out-alt"></i></span>
+							<span class="title"> Log out </span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="right-column">
 			<div class="col mt-4 ">
 				<div class="card">
 					<div class="card-header">
 						<h2>List Of Categories</h2>
 					</div>
 					<div class="card-body">
-						<div th:if="${message != null}" class="alert alert-primary"
-							role="alert">
+						<div th:if="${message != null}" class="alert alert-primary" role="alert">
 							<i>[[${message}]]</i>
 						</div>
 						<div class="row mt-2 mb-2">
 							<div class="col">
 								<form th:action="@{/admin/categories/search}">
 									<div class="form-inline float-left">
-										<label for="name">Name:</label> <input type="text"
-											class="form-control ml-2" name="name" id="name"
-											aria-describedby="helpId" placeholder="Name">
+										<label for="name">Name:</label> <input type="text" class="form-control ml-2"
+											name="name" id="name" aria-describedby="helpId" placeholder="Name">
 										<button class="btn btn-outline-primary ml-2">Search</button>
 									</div>
 								</form>
 								<div class="float-right">
-									<a class="btn btn-outline-primary"
-										th:href="@{/admin/categories/add}">Add New Category</a>
+									<a class="btn btn-outline-primary" th:href="@{/admin/categories/add}">Add New
+										Category</a>
 								</div>
 							</div>
 						</div>
@@ -47,14 +176,13 @@
 								<tr th:each="category : ${categories}">
 									<td scope="row">[[${category.categoryId}]]</td>
 									<td th:text="${category.name}"></td>
-									<td><a
-										th:href="@{'/admin/categories/view/' + ${category.categoryId}}"
-										class="btn btn-outline-info"><i class="fas fa-info"></i></a> <a
-										th:href="@{'/admin/categories/edit/' + ${category.categoryId}}"
-										class="btn btn-outline-warning"><i class="fas fa-edit"></i></a>
-										<a
-										th:href="@{'/admin/categories/delete/' + ${category.categoryId}}"
-										class="btn btn-outline-danger"><i class="fas fa-recycle"></i></a></td>
+									<td><a th:href="@{'/admin/categories/view/' + ${category.categoryId}}"
+											class="btn btn-outline-info"><i class="fas fa-info"></i></a> <a
+											th:href="@{'/admin/categories/edit/' + ${category.categoryId}}"
+											class="btn btn-outline-warning"><i class="fas fa-edit"></i></a>
+										<a th:href="@{'/admin/categories/delete/' + ${category.categoryId}}"
+											class="btn btn-outline-danger"><i class="fas fa-recycle"></i></a>
+									</td>
 								</tr>
 
 								<tr>
@@ -68,24 +196,24 @@
 					<div class="card-footer text-muted">
 						<nav aria-label="Page navigation">
 							<ul class="pagination justify-content-center">
-								<li class="page-item disabled"><a class="page-link"
-									href="#" aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
+								<li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous">
+										<span aria-hidden="true">&laquo;</span>
 										<span class="sr-only">Previous</span>
-								</a></li>
+									</a></li>
 								<li class="page-item active"><a class="page-link" href="#">1</a></li>
 								<li class="page-item"><a class="page-link" href="#">2</a></li>
-								<li class="page-item"><a class="page-link" href="#"
-									aria-label="Next"> <span aria-hidden="true">&raquo;</span>
+								<li class="page-item"><a class="page-link" href="#" aria-label="Next"> <span
+											aria-hidden="true">&raquo;</span>
 										<span class="sr-only">Next</span>
-								</a></li>
+									</a></li>
 							</ul>
 						</nav>
 					</div>
 				</div>
 
 			</div>
-		</section>
-
+		</div>
+	</section>
 </body>
 
-</html>
+</html> -->
