--- a/src/main/resources/templates/admin/fragments/footer.html
+++ b/src/main/resources/templates/admin/fragments/footer.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 </head>
 
 <body>
-    <div th:fragment="footer">This is footer</div>
+	<div th:fragment="footer"></div>
 </body>
 
 </html>
