--- a/src/main/resources/templates/admin/categories/list.html
+++ b/src/main/resources/templates/admin/categories/list.html
@@ -78,12 +78,12 @@
 		}
 
 		.left-column {
-			width: 21%;
+			width: 25%;
 			float: left;
 		}
 
 		.right-column {
-			width: 79%;
+			width: 75%;
 			float: right;
 		}
 	</style>
@@ -95,7 +95,7 @@
 			<div class="navigation">
 				<ul>
 					<li>
-						<a th:href="@{/admin/dashboard}">
+						<a href="#">
 							<span class="icon "><i class="fas fa-home"></i></span>
 							<span class="title"> Home </span>
 						</a>
@@ -181,7 +181,7 @@
 											th:href="@{'/admin/categories/edit/' + ${category.categoryId}}"
 											class="btn btn-outline-warning"><i class="fas fa-edit"></i></a>
 										<a th:href="@{'/admin/categories/delete/' + ${category.categoryId}}"
-											class="btn btn-outline-danger"><i class="fas fa-recycle"></i></a>
+											class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i></a>
 									</td>
 								</tr>
 
@@ -193,6 +193,7 @@
 							</tbody>
 						</table>
 					</div>
+					
 					<div class="card-footer text-muted">
 						<nav aria-label="Page navigation">
 							<ul class="pagination justify-content-center">
