--- a/src/main/resources/templates/admin/categories/search.html
+++ b/src/main/resources/templates/admin/categories/search.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{admin/dashboardLayout.html}">
 
@@ -216,4 +216,4 @@
 	</section>
 </body>
 
-</html> -->
+</html>
