--- a/src/main/resources/templates/admin/products/list.html
+++ b/src/main/resources/templates/admin/products/list.html
@@ -176,7 +176,7 @@
 										class="btn btn-outline-warning"><i class="fas fa-edit"></i></a>
 										<a th:data-id="${item.productId}" th:data-name="${item.name}"
 										onclick="showConfirmModalDialog(this.getAttribute('data-id'), this.getAttribute('data-name'))"
-										class="btn btn-outline-danger"><i class="fas fa-recycle"></i></a>
+										class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i></a>
 									</td>
 								</tr>
 							</tbody>
